# real-time-ai-chat-backend

./: .dockerignore  .env.example  Dockerfile  NOTES.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  logging_config.py  main.py  security.py
app/database/: base.py  redis.py  session.py
app/exceptions/: errors.py  handlers.py
app/models/: __init__.py  conversation.py  message.py  user.py
app/repositories/: __init__.py  conversation.py  message.py  user.py
app/routers/: __init__.py  auth.py  conversations.py  health.py  ws.py
app/schemas/: __init__.py  auth.py  common.py  conversation.py  message.py
app/services/: __init__.py  auth.py  base.py  chat.py  conversation.py  message.py
app/websocket/: __init__.py  manager.py  protocol.py  pubsub.py
migrations/: env.py
migrations/versions/: 20260629_1535_0001_initial_chat_schema.py
tests/: conftest.py  test_auth_dependencies.py  test_auth_router.py  test_auth_schemas.py  test_auth_service.py  test_chat_websocket_service.py  test_conversation_router.py  test_conversation_service.py  test_health.py  test_message_service.py  test_security.py  test_websocket_manager.py  test_websocket_protocol.py  test_websocket_pubsub.py
