[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "real-time-ai-chat-backend"
version = "0.1.0"
description = "FastAPI chat backend with PostgreSQL, Redis, and WebSockets"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database – async
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Cache / pub-sub
    "redis[hiredis]>=5.2.0",

    # Validation / settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # Utilities
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "anyio>=4.7.0",
    "factory-boy>=3.3.1",
    "freezegun>=1.5.1",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff – linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "RUF", # ruff-specific
]
ignore = [
    "S104",   # bind to all interfaces (needed for Docker)
    "B008",   # Depends() in argument defaults is the standard FastAPI pattern
    "ANN401", # Any is legitimate in generic repository layer and SQLAlchemy helpers
    "RUF002", # en-dash in docstrings – intentional Unicode
    "RUF003", # en-dash in comments – intentional Unicode
    "RUF001", # en-dash in strings – intentional Unicode
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]
"migrations/**" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*"]
